fixed save btn and div fix child from covering border of button div

--- a/src/components/cv-sections/work-experience/WorkExperience.css
+++ b/src/components/cv-sections/work-experience/WorkExperience.css
@@ -32,6 +32,7 @@
     text-decoration: none;
     color:#829cd0;
     font-size: 12px;
+    height: 25px;
 }
 .work-experience .save-section {
     margin-right: 120px;
